Add recursive variant node structure and corresponding value/list/dict sub types.
Sample executable verifies that a node can successfully be built from strings, vectors and maps
and that it can be serialized with standard containers stream operators.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,7 @@ include(FixStaticLink)
 
 project(libcorefungi CXX)
 parse_version(libcorefungi VERSION 0.0.1)
+
+include_directories(include src)
+
+add_executable(unit-test-corefungi src/corefungi/corefungi.cpp)
