--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: cpp
 script:
   - mkdir build
   - cd build
-  - cmake -DBUILD_TESTS=1 .. && make && make test
+  - cmake -DBUILD_TESTS=1 -DCMAKE_CXX_FLAGS="-iprefix /usr/lib/gcc-snapshot" .. && make && make test
 compiler:
   - clang
   - gcc
