Shorten the namespace name using an internal namespace.

--- a/src/corefungi/prefix.hpp.in
+++ b/src/corefungi/prefix.hpp.in
@@ -9,6 +9,7 @@
 #define __COREFUNGI_PREFIX_HPP_IN__
 
 namespace corefungi {
+  namespace cfg = ::corefungi;
 
   static std::string const install_prefix = "${CMAKE_INSTALL_PREFIX}";
 
