Try Travis-CI's OSX build slave ?

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,10 @@ script:
 compiler:
   - gcc
   - clang
+os:
+  - windowsxp
+  - osx
+  - linux
 before_install:
   - sudo add-apt-repository -y "deb http://archive.ubuntu.com/ubuntu/ quantal main universe"
   - sudo apt-get -qq update
