--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: cpp
 script:
   - mkdir build
   - cd build
-  - cmake -DBUILD_TESTS=1 -DENABLE_GCOVERALLS=1 .. && make && ctest -R corefungi && ./coveralls-upload
+  - cmake -DBUILD_TESTS=1 .. && make && ctest -R corefungi
 compiler:
   - gcc
   - clang
