--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = git://github.com/berenm/cmake-extra.git
 [submodule "lib/yaml-cpp"]
 	path = lib/yaml-cpp
-	url = git://github.com/bminor/yaml-cpp.git
+	url = git://github.com/berenm/yaml-cpp11.git
