Update gitmodules to track yaml-cpp c++11 branch.

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,5 @@
 	url = git://github.com/berenm/cmake-extra.git
 [submodule "lib/yaml-cpp"]
 	path = lib/yaml-cpp
+	branch = c++11
 	url = git://github.com/berenm/yaml-cpp11.git
