Add dependency to boost_filesystem and boost_program_options

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,8 @@ cmake_minimum_required(VERSION 3.4)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}")
 include(CMakeBuildPackage)
 
-build_package(REQUIRES system "yaml-cpp>=0.5.2")
+build_package(REQUIRES system
+  "yaml-cpp>=0.5.2"
+  "boost::program_options>=1.62.0"
+  "boost::filesystem>=1.62.0"
+)
