Add samples to the CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,8 @@ build_package(REQUIRES system
   "boost::program_options>=1.62.0"
   "boost::filesystem>=1.62.0"
 )
+
+add_executable(test-test1 test/test1.cpp)
+target_link_libraries(test-test1 PUBLIC libcorefungi)
+add_executable(test-test2 test/test2.cpp)
+target_link_libraries(test-test2 PUBLIC libcorefungi)
